# opengl-intro

./: .gitignore  README.md  book.url
first/: first.cpp  glad.c  meson.build  rectangle.cpp
first/exercises/: diffColors.cpp  diffVAOs.cpp
first/include/glad/: glad.h
